modificado para endnlock

--- a/mfdw_root/mdfw_site/templates/base.html
+++ b/mfdw_root/mdfw_site/templates/base.html
@@ -18,6 +18,10 @@
                     </nav>
                 </aside>
                 <section id="main">
+                    {% block content %}
+                    <h1>Welcome!</h1>
+                    <p>This is the site templates </p>
+                    {% endblock content %}
                     <h1>Welcome!</h1>
                     <p>This is the site template</p>
                 </section>
