--- a/mfdw_root/pages/templates/pages/page.html
+++ b/mfdw_root/pages/templates/pages/page.html
@@ -1,15 +1,14 @@
 {% extends "base.html" %}
 
-{% block title %}{{ title }}{% endblock title %} 
+{% block title %}{{ title }}{% endblock title %}
 
 {% block sidenav %}
-   {% for page in page_list %} <!--se hace un for para que este bloque aparezca en todas las páginas-->
-   <li>
-    <a href="{{ page.permalink }}">{{ page.title }}</a>
-   </li>
-   {% endfor %}
+    {% for page in page_list %}
+    <li>
+      <a href="{{ page.permalink }}">{{ page.title }}</a>
+    </li>
+    {% endfor %}
 {% endblock sidenav %}
-
 
 {% block content %}
 {% autoescape off %}
@@ -17,6 +16,7 @@
 {% endautoescape %}
 
 <p>
-    Página actualizada por última vez: {{ last_updated|date:'D d F Y'}}
+  Page last updated: {{ last_updated|date:"D d F Y" }}
 </p>
+
 {% endblock content %}
