--- a/mfdw_root/mfdw_site/templates/base.html
+++ b/mfdw_root/mfdw_site/templates/base.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
   {% block title %}
-    <title>Untitled Document</title>
+    <title>Pagina de inicio</title>
   {% endblock title %}
 <link href="{% static 'main.css' %}" rel="stylesheet" type="text/css">
 </head>
@@ -29,9 +29,9 @@
       {% block sidenav %}
       <li>Menu 1</li><li>Menu 2</li><li>Menu 3</li></ul>
       {% endblock sidenav %}
-      <li><a href="/contact">Contact Us</a></li>
-      <li><a href="/quote/">Get a Quote</a></li>
-      <li><a href="/quote/show">Show Quotes</a></li>
+      <li><a href="/contact">Contactanos</a></li>
+      <li><a href="/quote/">Devolcuion</a></li>
+      <li><a href="/quote/show">Foro</a></li>
     </nav>
   </aside>
   <section id="main">
